fix: Added some changes back and made the go build pass again.